--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,13 +12,13 @@
                 <img class="header" src="MEDIA/IMAGES/icon.png" alt="icon">
             </div>
             <div align="right">
-                <a href="">HOME</a>
-                <a href="">ABOUT US</a>
-                <a href="">FIND A PET</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/INDEX.HTML">HOME</a>
+                <a href="https://cip1101-fuerte-itad.000webhostapp.com/FUERTE_CIP1101_ITAD/HTML/AboutUs/AboutUs.html">ABOUT US</a>
+                <a href="https://masteriguin.github.io/FindAPet/Findpet.html">FIND A PET</a>
                 <a href="">OUR PETS</a>
-                <a href="">CONTACT US</a>
-                <a href="">FAQs</a>
-                <a href="">AUTHORS</a>
+                <a href="https://subsurface-disconti.000webhostapp.com/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
+                <a href="https://dyape.github.io/MANASIS_ITAD/GROUP%20PROJECT/faq's.html">FAQs</a>
+                <a href="https://jethrotatco.github.io/Authors/petAuthors/authors-itad.html">AUTHORS</a>
                 <a href=""><img src="MEDIA/IMAGES/search.png" alt="search" class="icon"></a>
             </div>
         </div>
@@ -100,9 +100,9 @@
                     <h2>Follow Us</h2>
                 </div align="center">
                 <div class="ic">
-                <a href=""><img src="MEDIA/IMAGES/facebook.png" alt="icon" class="facebook"></a>
-                <a href=""><img src="MEDIA/IMAGES/twitter.png" alt="icon" class="facebook"></a> 
-                <a href=""><img src="MEDIA/IMAGES/instagram.png" alt="" class="facebook"></a>
+                <a href="https://www.facebook.com/lovestaryph/"><img src="MEDIA/IMAGES/facebook.png" alt="icon" class="facebook"></a>
+                <a href="https://twitter.com/lovestrayph"><img src="MEDIA/IMAGES/twitter.png" alt="icon" class="facebook"></a> 
+                <a href="https://www.instagram.com/lovestray_pets/"><img src="MEDIA/IMAGES/instagram.png" alt="" class="facebook"></a>
               </div>    
             </div>
         </footer>    
