--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -88,11 +88,11 @@
                 <br><br>
                 <a href="">Pet Categories</a>
                 <br><br>
-                <a href="">Pet Ages</a>
+                <a href="https://subsurface-disconti.000webhostapp.com/Dog%20age/DogAge.html">Pet Ages</a>
                 <br><br>
-                <a href="">Adoption Form</a>
+                <a href="https://cip1101-fuerte-itad.000webhostapp.com/FUERTE_CIP1101_ITAD/HTML/AdoptionForm/HTML/AdoptionForm.html">Adoption Form</a>
                 <br><br>
-                <a href="">Sending Form</a>
+                <a href="https://cip1101-fuerte-itad.000webhostapp.com/FUERTE_CIP1101_ITAD/HTML/SendPetForm/HTML/SendPetForm.html">Sending Form</a>
             </div>
             <i class="divider"></i>
             <div align="center">
