--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -16,7 +16,7 @@
                 <a href="https://cip1101-fuerte-itad.000webhostapp.com/FUERTE_CIP1101_ITAD/HTML/AboutUs/AboutUs.html">ABOUT US</a>
                 <a href="https://masteriguin.github.io/FindAPet/Findpet.html">FIND A PET</a>
                 <a href="">OUR PETS</a>
-                <a href="https://subsurface-disconti.000webhostapp.com/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
+                <a href="https://arvileal12.github.io/ContactUs-/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
                 <a href="https://dyape.github.io/MANASIS_ITAD/GROUP%20PROJECT/faq's.html">FAQs</a>
                 <a href="https://jethrotatco.github.io/Authors/petAuthors/authors-itad.html">AUTHORS</a>
                 <a href=""><img src="MEDIA/IMAGES/search.png" alt="search" class="icon"></a>
@@ -88,7 +88,7 @@
                 <br><br>
                 <a href="">Pet Categories</a>
                 <br><br>
-                <a href="https://subsurface-disconti.000webhostapp.com/Dog%20age/DogAge.html">Pet Ages</a>
+                <a href="https://arvileal12.github.io/PETAGE/Dog%20age/DogAge.html">Pet Ages</a>
                 <br><br>
                 <a href="https://cip1101-fuerte-itad.000webhostapp.com/FUERTE_CIP1101_ITAD/HTML/AdoptionForm/HTML/AdoptionForm.html">Adoption Form</a>
                 <br><br>
