--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -15,9 +15,9 @@
                 <a href="">HOME</a>
                 <a href="">ABOUT US</a>
                 <a href="">FIND A PET</a>
-                <a href="">OUR PETS</a>
-                <a href="">CONTACT US</a>
-                <a href="">FAQs</a>
+                <a href="https://fontanilla-annabeatrize.github.io/cip1101-fontanilla/HTML/ourpets_landingpage.html">OUR PETS</a>
+                <a href="https://arvileal12.github.io/ContactUs-/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
+                <a href="https://dyape.github.io/MANASIS_ITAD/GROUP%20PROJECT/faq's.html">FAQs</a>
                 <a href="https://jethrotatco.github.io/Authors/petAuthors/authors-itad.html">AUTHORS</a>
                 <a href=""><img src="MEDIA/IMAGES/search.png" alt="search" class="icon"></a>
             </div>
@@ -28,7 +28,7 @@
             <h4>Quest for Paws Animal Rescue and Sanctuary</h4>
         </div>
         <div>
-            <a href="https://laraganjulianne.github.io/Sponsor/Sponsor/html/Sponsor.html" class="sponsor"><h3>Sponsor a rescue today</h3> </a>
+            <a href="" class="sponsor"><h3>Sponsor a rescue today</h3> </a>
         </div>
        
         <div class="other">
@@ -100,9 +100,9 @@
                     <h2>Follow Us</h2>
                 </div align="center">
                 <div class="ic">
-                <a href=""><img src="MEDIA/IMAGES/facebook.png" alt="icon" class="facebook"></a>
-                <a href=""><img src="MEDIA/IMAGES/twitter.png" alt="icon" class="facebook"></a> 
-                <a href=""><img src="MEDIA/IMAGES/instagram.png" alt="" class="facebook"></a>
+                <a href="https://www.facebook.com/lovestaryph/"><img src="MEDIA/IMAGES/facebook.png" alt="icon" class="facebook"></a>
+                <a href="https://twitter.com/lovestrayph"><img src="MEDIA/IMAGES/twitter.png" alt="icon" class="facebook"></a> 
+                <a href="https://www.instagram.com/lovestray_pets/"><img src="MEDIA/IMAGES/instagram.png" alt="" class="facebook"></a>
               </div>    
             </div>
         </footer>    
