--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -82,7 +82,7 @@
             </div>
             <i class="divider"></i>
             <div>
-                <a href="">Adopt a Pet</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/AdoptPet.html">Adopt a Pet</a>
                 <br><br>
                 <a href="">Send a Pet</a>
                 <br><br>
