--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,7 +12,7 @@
                 <img class="header" src="MEDIA/IMAGES/icon.png" alt="icon">
             </div>
             <div align="right">
-                <a href="">HOME</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/INDEX.HTML">HOME</a>
                 <a href="">ABOUT US</a>
                 <a href="">FIND A PET</a>
                 <a href="https://fontanilla-annabeatrize.github.io/cip1101-fontanilla/HTML/ourpets_landingpage.html">OUR PETS</a>
@@ -84,7 +84,7 @@
             <div>
                 <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/AdoptPet.html">Adopt a Pet</a>
                 <br><br>
-                <a href="">Send a Pet</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/SendAPet.html">Send a Pet</a>
                 <br><br>
                 <a href="">Pet Categories</a>
                 <br><br>
