--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,8 +13,8 @@
             </div>
             <div align="right">
                 <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/INDEX.HTML">HOME</a>
-                <a href="">ABOUT US</a>
-                <a href="">FIND A PET</a>
+                <a href="https://ot5cito.github.io/Fuerte_CIP_Group3/AboutUs/HTML/AboutUs.html">ABOUT US</a>
+                <a href="https://masteriguin.github.io/FindAPet/Findpet.html">FIND A PET</a>
                 <a href="https://fontanilla-annabeatrize.github.io/cip1101-fontanilla/HTML/ourpets_landingpage.html">OUR PETS</a>
                 <a href="https://arvileal12.github.io/ContactUs-/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
                 <a href="https://dyape.github.io/MANASIS_ITAD/GROUP%20PROJECT/faq's.html">FAQs</a>
@@ -28,7 +28,7 @@
             <h4>Quest for Paws Animal Rescue and Sanctuary</h4>
         </div>
         <div>
-            <a href="" class="sponsor"><h3>Sponsor a rescue today</h3> </a>
+            <a href="https://laraganjulianne.github.io/SPONSOR_GROUP3/Sponsor/HTML/Sponsor.html" class="sponsor"><h3>Sponsor a rescue today</h3> </a>
         </div>
        
         <div class="other">
@@ -86,13 +86,14 @@
                 <br><br>
                 <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/SendAPet.html">Send a Pet</a>
                 <br><br>
-                <a href="">Pet Categories</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/PetCategories.html">Pet Categories</a>
                 <br><br>
-                <a href="">Pet Ages</a>
+                <a href="https://subsurface-disconti.000webhostapp.com/Dog%20age/DogAge.html
+">Pet Ages</a>
                 <br><br>
-                <a href="">Adoption Form</a>
+                <a href="https://ot5cito.github.io/Fuerte_CIP_Group3/AdoptionForm/HTML/AdoptionForm.html">Adoption Form</a>
                 <br><br>
-                <a href="">Sending Form</a>
+                <a href="https://ot5cito.github.io/Fuerte_CIP_Group3/SendPetForm/HTML/SendPetForm.html">Sending Form</a>
             </div>
             <i class="divider"></i>
             <div align="center">
