--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -88,7 +88,7 @@
                 <br><br>
                 <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/HTML/PetCategories.html">Pet Categories</a>
                 <br><br>
-                <a href="https://https://arvileal12.github.io/PETAGE/Dog%20age/DogAge.html
+                <a href="https://arvileal12.github.io/PETAGE/Dog%20age/DogAge.html
 ">Pet Ages</a>
                 <br><br>
                 <a href="https://ot5cito.github.io/Fuerte_CIP_Group3/AdoptionForm/HTML/AdoptionForm.html">Adoption Form</a>
