--- a/HTML/PetCategories.html
+++ b/HTML/PetCategories.html
@@ -100,7 +100,7 @@ a:hover {
                     </div>
                 </div>
                 <div align="center">
-                    <h2>DOGS</h2>
+                    <h2>CATS</h2>
                     <div class="dogcategories">
                         <img src="../MEDIA/IMAGES/cat1.jpeg" alt="" class="dogs" target="Images">
                         <img src="../MEDIA/IMAGES/cat2.jpeg" alt="" class="dogs" target="Images">
