--- a/HTML/PetCategories.html
+++ b/HTML/PetCategories.html
@@ -6,58 +6,71 @@
         <link rel="icon" href="../MEDIA/IMAGES/Lovestray.png" type="image/x-icon"> 
         <base target="Images">
         <style>
-        body{
+         body{
             background-color: #b5aca2;
             margin: 0;
         }
         .header img {
-    float: left;
-    width: 100px;
-    height: 75px;
-}
-div.nav {
-    margin: .75%;
-    padding: 2%;
-    background-color: rgba(0, 0, 0, 0.441);
-}
+            float: left;
+            width: 100px;
+            height: 75px;
+        }
+        div.nav {
+            margin: .75%;
+            padding: 2%;
+            background-color: rgba(0, 0, 0, 0.441);
+        }
 
-img.icon {
-    float: right;
-    margin-right: 2%;
-    padding: 0%;
+        img.icon {
+            float: right;
+            margin-right: 2%;
+            padding: 0%;
+        }
 
-}
-img.header {
-    top: 20px;
-    float: left;
-    margin: 0%;
-    padding: 0%;
-    position: absolute;
-}
-a{
-    color: whitesmoke;
-    text-decoration: none;
-    padding: 10px;
-    margin: 10px;
-    font-size: 18px;
-    font-family: Helvetica;
-}
-a:hover {
-    color: aqua;
-}
-    h1{
-        text-align: center;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: bolder;
-        text-shadow: 8px 8px 20px black;
-        color: white;
-    }
-    img.dogs{
-        height: 200px;
-        width: 200px;
-        margin: 20px;
-        border: 10px solid #838b64;
-    }
+        img.header {
+            top: 20px;
+            float: left;
+            margin: 0%;
+            padding: 0%;
+            position: absolute;
+        }
+
+        a{
+            color: whitesmoke;
+            text-decoration: none;
+            padding: 10px;
+            margin: 10px;
+            font-size: 18px;
+            font-family: Helvetica;
+        }
+
+        a:hover {
+            color: aqua;
+        }
+        h1{
+            text-align: center;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: bolder;
+            padding: 40px 0 0 0;
+            color: white;
+            font-size: 3em;
+        }
+
+        img.dogs{
+            height: 200px;
+            width: 200px;
+            margin: 20px;
+            border: 10px solid #838b64;
+        }
+
+        h2{
+            margin-top: 65px;
+            background-color: #838b64;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            width: 30%;
+            padding: 10px;
+            color: aliceblue;
+        }
         </style>
         
     </head>
@@ -84,34 +97,34 @@ a:hover {
                 <div>
                     <h1>PET CATEGORIES</h1>
                 </div>
-                <div align="center">
+    <div align="center">
                     <h2>DOGS</h2>
                     <div class="dogcategories">
-                        <img src="../MEDIA/IMAGES/dog.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog1.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog8.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog3.jpeg" alt="" class="dogs" target="Images">
+                        <a href="../MEDIA/IMAGES/dog.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog1.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog1.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog8.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog8.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog3.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog3.jpeg" alt="" class="dogs"></a>
                     </div>
                     <div>
-                        <img src="../MEDIA/IMAGES/dog4.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog5.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog6.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/dog7.jpeg" alt="" class="dogs" target="Images">
+                        <a href="../MEDIA/IMAGES/dog4.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog4.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog5.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog5.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog6.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog6.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/dog7.jpeg" target="Images"><img src="../MEDIA/IMAGES/dog7.jpeg" alt="" class="dogs"></a>
                     </div>
                 </div>
                 <div align="center">
                     <h2>CATS</h2>
                     <div class="dogcategories">
-                        <img src="../MEDIA/IMAGES/cat1.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat2.jpeg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat3.jpg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat4.jpg" alt="" class="dogs" target="Images">
+                        <a href="../MEDIA/IMAGES/cat1.jpeg" target="Images"><img src="../MEDIA/IMAGES/cat1.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat2.jpeg" target="Images"><img src="../MEDIA/IMAGES/cat2.jpeg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat3.jpg" target="Images"><img src="../MEDIA/IMAGES/cat3.jpg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat4.jpg" target="Images"><img src="../MEDIA/IMAGES/cat4.jpg" alt="" class="dogs"></a>
                     </div>
                     <div>
-                        <img src="../MEDIA/IMAGES/cat5.jpg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat6.jpg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat7.jpg" alt="" class="dogs" target="Images">
-                        <img src="../MEDIA/IMAGES/cat8.jpg" alt="" class="dogs" target="Images">
+                        <a href="../MEDIA/IMAGES/cat5.jpg" target="Images"><img src="../MEDIA/IMAGES/cat5.jpg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat6.jpg" target="Images"><img src="../MEDIA/IMAGES/cat6.jpg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat7.jpg" target="Images"><img src="../MEDIA/IMAGES/cat7.jpg" alt="" class="dogs"></a>
+                        <a href="../MEDIA/IMAGES/cat8.jpg" target="Images"><img src="../MEDIA/IMAGES/cat8.jpg" alt="" class="dogs"></a>
                     </div>
                 </div>
                 <div>
