--- a/HTML/PetCategories.html
+++ b/HTML/PetCategories.html
@@ -82,12 +82,12 @@
                 <img class="header" src="../MEDIA/IMAGES/icon.png" alt="icon">
             </div>
             <div align="right">
-                <a href="">HOME</a>
-                <a href="">ABOUT US</a>
-                <a href="">FIND A PET</a>
-                <a href="">OUR PETS</a>
-                <a href="">CONTACT US</a>
-                <a href="">FAQs</a>
+                <a href="https://morenojoanhazel.github.io/FinalGroup3-CIP1101/INDEX.HTML">HOME</a>
+                <a href="https://ot5cito.github.io/Fuerte_CIP_Group3/AboutUs/HTML/AboutUs.html">ABOUT US</a>
+                <a href="https://masteriguin.github.io/FindAPet/Findpet.html">FIND A PET</a>
+                <a href="https://fontanilla-annabeatrize.github.io/cip1101-fontanilla/HTML/ourpets_landingpage.html">OUR PETS</a>
+                <a href="https://arvileal12.github.io/ContactUs-/LEAL_GROUP3_CONTACTUS/contactus.html">CONTACT US</a>
+                <a href="https://dyape.github.io/MANASIS_ITAD/GROUP%20PROJECT/faq's.html">FAQs</a>
                 <a href="https://jethrotatco.github.io/Authors/petAuthors/authors-itad.html">AUTHORS</a>
                 <a href=""><img src="../MEDIA/IMAGES/search.png" alt="search" class="icon"></a>
             </div>
